<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tool="http://schemas.android.com/tools"
    android:background="@color/colorSecondary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time_label"
            android:layout_centerHorizontal="true"
            android:text= "@string/start" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/start"
            android:text="@string/list_title"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="21sp" />

        <ListView
            android:id="@+id/msgs"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_alignParentStart="true"
            android:layout_below="@id/start"
            android:layout_marginTop="25dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/stud_no_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/msgs"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/reg_stud"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/stud_registered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/stud_no_label"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/stud_no_label"
            android:text="@string/initial"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stud_on_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/stud_no_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/stud_att"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/stud_online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/stud_on_label"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/stud_on_label"
            android:text="@string/initial"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/write_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/stud_online"
            android:layout_marginTop="10dp"
            android:layout_toStartOf="@id/send_button"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/question"
            android:textColorHint="@android:color/white" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:enabled="false"
            android:text="@string/send" />

        <LinearLayout
            android:id="@+id/time_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/duration"
                android:textColor="@android:color/black"
                android:textAlignment="textEnd"
                android:textSize="15sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/time_rem"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginTop="6dp"
                tool:text="hr:mm:ss"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>